--- a/LearnJS/index2.html
+++ b/LearnJS/index2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
     <script src="SecPart.js" defer></script>
     <title>SecPart</title>
   </head>
@@ -66,5 +67,175 @@
       <li><a href="http://nodejs.org">http://nodejs.org</a></li>
       <li><a href="http://internal.com/test">http://internal.com/test</a></li>
     </ul>
+    <div id="sweeties" class="task-menu">
+      <span class="task-title">Сладости (нажми меня)!</span>
+      <ul>
+        <li>Пирожное</li>
+        <li>Пончик</li>
+        <li>Мёд</li>
+      </ul>
+    </div>
+
+    <div id="carousel" class="carousel">
+      <button class="arrow prev">⇦</button>
+      <div class="gallery">
+        <ul class="images">
+          <li><img src="https://ru.js.cx/carousel/1.png" /></li>
+          <li><img src="https://ru.js.cx/carousel/2.png" /></li>
+          <li><img src="https://ru.js.cx/carousel/3.png" /></li>
+          <li><img src="https://ru.js.cx/carousel/4.png" /></li>
+          <li><img src="https://ru.js.cx/carousel/5.png" /></li>
+          <li><img src="https://ru.js.cx/carousel/6.png" /></li>
+          <li><img src="https://ru.js.cx/carousel/7.png" /></li>
+          <li><img src="https://ru.js.cx/carousel/8.png" /></li>
+          <li><img src="https://ru.js.cx/carousel/9.png" /></li>
+          <li><img src="https://ru.js.cx/carousel/10.png" /></li>
+        </ul>
+      </div>
+      <button class="arrow next">⇨</button>
+    </div>
+
+    <ul class="tree" id="tree">
+      <li>
+        Животные
+        <ul>
+          <li>
+            Млекопитающие
+            <ul>
+              <li>Коровы</li>
+              <li>Ослы</li>
+              <li>Собаки</li>
+              <li>Тигры</li>
+            </ul>
+          </li>
+          <li>
+            Другие
+            <ul>
+              <li>Змеи</li>
+              <li>Птицы</li>
+              <li>Ящерицы</li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+      <li>
+        Рыбы
+        <ul>
+          <li>
+            Аквариумные
+            <ul>
+              <li>Гуппи</li>
+              <li>Скалярии</li>
+            </ul>
+          </li>
+          <li>
+            Морские
+            <ul>
+              <li>Морская форель</li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+    </ul>
+
+    <p>ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя</p>
+    <p>ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя ЛяЛяЛя</p>
+
+    <button data-tooltip="эта подсказка должна быть длиннее, чем элемент">
+      Короткая кнопка
+    </button>
+    <button data-tooltip="HTML<br>подсказка">Ещё кнопка</button>
+
+    <p>
+      Прокрутите страницу, чтобы кнопки оказались у верхнего края, а затем
+      проверьте, правильно ли выводятся подсказки.
+    </p>
+
+    <a href="/" onclick="return false">Нажми здесь</a>
+    или
+    <a href="/" onclick="event.preventDefault()">здесь</a>
+
+    <fieldset id="contents">
+      <legend>#contents</legend>
+      <p>
+        Как насчёт того, чтобы прочитать
+        <a href="http://wikipedia.org">Википедию</a> или посетить
+        <a href="http://w3.org"><i>W3.org</i></a> и узнать о современных
+        стандартах?
+      </p>
+    </fieldset>
+
+    <p>
+      <img
+        id="largeImg"
+        src="https://en.js.cx/gallery/img1-lg.jpg"
+        alt="Large image"
+      />
+    </p>
+
+    <ul id="thumbs">
+      <!-- браузер показывает небольшую встроенную подсказку из атрибута "title" при наведении курсора на текст -->
+      <li>
+        <a href="https://en.js.cx/gallery/img2-lg.jpg" title="Image 2"
+          ><img src="https://en.js.cx/gallery/img2-thumb.jpg"
+        /></a>
+      </li>
+      <li>
+        <a href="https://en.js.cx/gallery/img3-lg.jpg" title="Image 3"
+          ><img src="https://en.js.cx/gallery/img3-thumb.jpg"
+        /></a>
+      </li>
+      <li>
+        <a href="https://en.js.cx/gallery/img4-lg.jpg" title="Image 4"
+          ><img src="https://en.js.cx/gallery/img4-thumb.jpg"
+        /></a>
+      </li>
+      <li>
+        <a href="https://en.js.cx/gallery/img5-lg.jpg" title="Image 5"
+          ><img src="https://en.js.cx/gallery/img5-thumb.jpg"
+        /></a>
+      </li>
+      <li>
+        <a href="https://en.js.cx/gallery/img6-lg.jpg" title="Image 6"
+          ><img src="https://en.js.cx/gallery/img6-thumb.jpg"
+        /></a>
+      </li>
+    </ul>
+
+    До...
+    <b ondblclick="alert('Клик!')" onmousedown="return false">
+      Сделайте двойной клик на мне
+    </b>
+    ...После Кликни на элемент списка, чтобы выделить его.
+    <br />
+
+    <ul id="ul-list">
+      <li>Кристофер Робин</li>
+      <li>Винни Пух</li>
+      <li>Тигра</li>
+      <li>Кенга</li>
+      <li>Кролик. Просто Кролик.</li>
+    </ul>
+
+    <div id="slider" class="slider">
+      <div class="slider-thumb"></div>
+    </div>
+
+    <h2>Кликните на кнопку ниже</h2>
+
+    <input
+      type="button"
+      value="Кликните, чтобы увидеть форму"
+      id="show-button"
+    />
+
+    <div id="prompt-form-container">
+      <form id="prompt-form">
+        <div id="prompt-message"></div>
+        <input name="text" type="text" />
+        <input type="submit" value="Ok" />
+        <input type="button" name="cancel" value="Отмена" />
+      </form>
+    </div>
   </body>
 </html>
