Еще пачка задач + измененые названия страниц

--- a/LearnJS/index4.html
+++ b/LearnJS/index4.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
     <script src="debounce.js" defer></script>
-    <title>SecPart</title>
+    <title>Debounce</title>
   </head>
   <body></body>
 </html>
