--- a/LearnJS/index5.html
+++ b/LearnJS/index5.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
     <script src="animate.js" defer></script>
-    <title>SecPart</title>
+    <title>Animation</title>
 
     <span id="text">asdasdasd</span>
   </head>
