--- a/LearnJS/index6.html
+++ b/LearnJS/index6.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
-    <script src="randomMatrix.js" defer></script>
-    <title>randomMatrix</title>
+    <script src="promise.js" defer></script>
+    <title>Promise</title>
+
+    <span id="text">asdasdasd</span>
   </head>
   <body></body>
 </html>
